fixed long forecast disclaimer text alignment

--- a/src/client/styles/trip-form-output.scss
+++ b/src/client/styles/trip-form-output.scss
@@ -160,7 +160,7 @@
             color: $background;
             width: 80vw;
             font-size: 0.8em;
-            margin-bottom: 20px;
+            margin: 20px auto;
         }
     }
 
